bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/EUSFA_Account_Status_Event__c.object-meta.xml
<CustomObject>
    <label>EUSFA Account Status Event</label>
    <nameField>
        <label>EUSFA Account Status Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EUSFA Account Status Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>