bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EUSFA Account Status Events</relationshipLabel>
    <relationshipName>EUSFA_Account_Status_Events</relationshipName>
    <type>Lookup</type>
</CustomField>