bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>EUSFA Account Status Events</relationshipLabel>
    <relationshipName>EUSFA_Account_Status_Events</relationshipName>
    <type>Lookup</type>
</CustomField>