bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Expire_On__c.field-meta.xml
<CustomField>
    <fullName>Expire_On__c</fullName>
    <defaultValue>TODAY() + 7</defaultValue>
    <description>Date that the notification expires on automatically. If blank, the notification was manually expired</description>
    <label>Expire On</label>
    <type>Date</type>
</CustomField>