bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether a notification has been read, if so, it should not be retrieved</description>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>