bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Subtitle displayed in notification panel</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>