bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Row_Meaning__c.field-meta.xml
<CustomField>
    <fullName>Row_Meaning__c</fullName>
    <label>Row Meaning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Notification Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>