bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title used for notification panel</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>