bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract expiring</fullName>
            </value>
            <value>
                <fullName>Investment/ Rebate</fullName>
            </value>
            <value>
                <fullName>Asset Status: Removed</fullName>
            </value>
            <value>
                <fullName>Contract Expired</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>