bundled_metadata/force-app/main/default/objects/EUSFA_Account_Status_Event__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>EUSFA Account Status Events</relationshipLabel>
    <relationshipName>EUSFA_Account_Status_Events</relationshipName>
    <type>Lookup</type>
</CustomField>